tests/negative/runtime/int_overflow_incr/input.ci
void main() {
    int x = 9223372036854775807;  // INT64_MAX
    x++;
    print(toString(x) + "\n");
}
